[project]
name = "hello"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Eli Mayost", email = "eli.mayost@googlemail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "icecream>=2.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "bastet>=0.1.2",
    "pytest>=8.3.4",
    "python-lsp-server[all]>=1.12.0",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
bastet = "bastet --skip format src/"
bastet_clean = "rm -rf .ruff_cache/ .mypy_cache/ reports/ .pytest_cache/ .coverage"

[tool.bastet]

disable = ["isort", "black", "reuse"]

[tool.ruff.lint]

select = ["ALL"]
ignore = [
    "D200",  # Single line doc strings do not need to fit on a single line in code.
    "D203",  # Zero blank lines before docstring.
    "D202",  # One blank line after docstring.
    "D212",  # Multi-line docstring summary should start at the second line.
    "D401",  # Docs strings do not have to be in the imperative mood.

    "TC001", "TC002", "TC003",  # Don't use if TYPE_CHECKING: blocks.

    "EM101",  # Exceptions can use string literals
]

[tool.ruff]
extend-exclude = ["tests"]

[[tool.mypy.overrides]]
module = "icecream.*"
ignore_missing_imports = true
